--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
    	<nav>
 	<ul>
-		<li><a href="bio.html">About Me</a></li>
+		<li><a href="index.html">About Me</a></li>
 		<li><a href="projects.html">My Projects</a></li>
 		<li><a href="resume.html">My Resume</a></li>
 		
