--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			My favorite color is Red.		
 			I love being here. I want to be a software developer and
 			I am very passionate about it.
-			I am taking Java 1, Python, HTML and CSS classes and I am very enjoying them.
+			I am taking Java, Python, HTML and CSS classes and I am very enjoying them.
 			I don't have many friends here and I like to meet
 			people and make new friends.
 		</p>
