--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,11 @@
     </header>
 	
 	<main>
+		<div class="img4">
+			<a href="https://swan-store.netlify.com/"><img src="images/store.PNG" alt="store picture"/></a>
+			<p><strong>Swan Store</strong>
+			<br>This is a real e-commerence site where you can buy things.</p>
+		</div>
 		<div class="img1">
 			<img src="images/dice.PNG" alt="dice game picture"/>
 			<p><strong>Dice Rolling Game</strong>
