--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
 			It also has the data validation which checks the user input.</p>
 		</div>
 		<div class="img3">
-			<img src="images/hearth_month.PNG" alt="hearth_month picture"/>
+			<a href="https://swanhtet-grc.github.io/HeartMonth/"><img src="images/hearth_month.PNG" alt="hearth_month picture"/></a>
 			<p><strong>American Hearth Month Website</strong>
 			<br>This is a school project which we did for American Hearth month.</p>
 		</div>	
