--- a/index.html
+++ b/index.html
@@ -1,60 +1,57 @@
 <!doctype html>
 <html lang="en">
-    <head>
-      <!--
+
+<head>
+	<!--
         Author: Swan Htet
         Date:Feb 23, Winter 2020
         filename: bio.html
         description: This is an html file.
       -->
-        <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>About Me</title>
-		<link href ="styles/reset.css" rel="stylesheet"/>
-		<link href ="styles/bio_styles.css" rel="stylesheet"/>
-		<link href ="styles/site_styles.css" rel="stylesheet"/>
-		<script src="https://kit.fontawesome.com/789d66cafa.js" crossorigin="anonymous"></script>
-    </head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>About Me</title>
+	<link href="styles/reset.css" rel="stylesheet" />
+	<link href="styles/bio_styles.css" rel="stylesheet" />
+	<link href="styles/site_styles.css" rel="stylesheet" />
+	<script src="https://kit.fontawesome.com/789d66cafa.js" crossorigin="anonymous"></script>
+</head>
 
 
-    <body>
-   	<nav>
-	<ul>
-		<li><a href="index.html">About Me</a></li>
-		<li><a href="projects.html">My Projects</a></li>
-		<li><a href="resume.html">My Resume</a></li>
-		
-	</ul>
+<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">About Me</a></li>
+			<li><a href="projects.html">My Projects</a></li>
+			<li><a href="resume.html">My Resume</a></li>
+
+		</ul>
 	</nav>
-    <header>
+	<header>
 		<h1>I'm Swan Htet</h1>
-		<h2>A Software Development Student </h2>
-    </header>
-	
+		<h2>Software Engineer who love to code.</h2>
+	</header>
+
 	<main>
 		<h1>About Me</h1>
-		<img src="images/img1.JPG" alt="Swan Htet's picture"/>
-	
-		<p >
+		<img src="images/img1.JPG" alt="Swan Htet's picture" />
+
+		<p>
 			My name is Swan Htet.
-			I am 20 years old. 
-			I am an international Student 
-			from Myanmar.
-			I have been here for one year. 
-			I am majoring in Software Development.
-			My favorite color is Red.		
-			I love being here. I want to be a software developer and
-			I am very passionate about it.
-			I am taking Java, Python, HTML and CSS classes and I am very enjoying them.
-			I don't have many friends here and I like to meet
-			people and make new friends.
+			I am from Myanmar and I studied Software Engineering at a College in Seattle, USA.
+			After that, I transfered to an online US university and studying Computer Science.
+			During my free time, I teach myself programming languages like JavaScript and Python
+			and technology like React, Node, Express, Git, Github, HTML, CSS,
+			Boostrap etc.I love being a Software Engineer and I am very passionate
+			about Technology.
 		</p>
-	
+
 	</main>
- 
+
 	<footer>
-		
+
 		<p> <i class="fas fa-laptop-code"></i> &nbsp;Developed By Swan Htet&nbsp; <i class="fas fa-laptop-code"></i></p>
 	</footer>
-    </body>
+</body>
+
 </html>
