--- a/projects.html
+++ b/projects.html
@@ -1,64 +1,69 @@
 <!doctype html>
 <html lang="en">
-    <head>
-      <!--
+
+<head>
+	<!--
         Author: Swan Htet
         Date:Feb 23, Winter 2020
         filename: projects.html
         description: This is an html file.
       -->
-        <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>My Projects</title>
-		<link href ="styles/reset.css" rel="stylesheet"/>
-		<link href ="styles/projects_styles.css" rel="stylesheet"/>
-		<link href ="styles/site_styles.css" rel="stylesheet"/>
-		<script src="https://kit.fontawesome.com/789d66cafa.js" crossorigin="anonymous"></script>
-    </head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>My Projects</title>
+	<link href="styles/reset.css" rel="stylesheet" />
+	<link href="styles/projects_styles.css" rel="stylesheet" />
+	<link href="styles/site_styles.css" rel="stylesheet" />
+	<script src="https://kit.fontawesome.com/789d66cafa.js" crossorigin="anonymous"></script>
+</head>
 
 
-    <body>
-   	<nav>
-	<ul>
-		<li><a href="index.html">About Me</a></li>
-		<li><a href="projects.html">My Projects</a></li>
-		<li><a href="resume.html">My Resume</a></li>
-		
-	</ul>
+<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">About Me</a></li>
+			<li><a href="projects.html">My Projects</a></li>
+			<li><a href="resume.html">My Resume</a></li>
+
+		</ul>
 	</nav>
-    <header>
+	<header>
 		<h1>My Projects</h1>
-    </header>
-	
+	</header>
+
 	<main>
 		<div class="img4">
-			<a href="https://swan-store.netlify.com/"><img src="images/store.PNG" alt="store picture"/></a>
+			<a href="https://swan-store.netlify.com/"><img src="images/store.PNG" alt="store picture" /></a>
 			<p><strong>Swan Store</strong>
-			<br>This is a real e-commerence site where you can buy things.</p>
-		</div>
-		<div class="img1">
-			<img src="images/dice.PNG" alt="dice game picture"/>
-			<p><strong>Dice Rolling Game</strong>
-			<br>This is a game where the user can play with the dices.
-				This game is built with HTML, CSS and JavaScript.</p>
+				<br>This is a e-commerence site where you can buy things.</p>
 		</div>
 		<div class="img2">
-			<img src="images/facebook.PNG" alt="facebook photo"/>
-			<p><strong>Facebook Sign Up Page</strong>
-			<br>This page is a sign up page which is Facebook mobile app syle.
-			It also has the data validation which checks the user input.</p>
+			<a href="https://swan-calculator.netlify.app/"><img src="images/img2.JPG"
+					alt="swan-calculator picture" /></a>
+			<p><strong>Swan's Calculator</strong>
+				<br>This is a calculator using React.js.</p>
 		</div>
+		<div class="img1">
+			<a href="https://swan-dicegame.netlify.app/">
+				<img src="images/dice.PNG" alt="dice game picture" /></a>
+			<p><strong>Dice Rolling Game</strong>
+				<br>This is a game where the user can play with the dices.
+				This game is built with HTML, CSS and JavaScript.</p>
+		</div>
+
 		<div class="img3">
-			<a href="https://swanhtet-grc.github.io/HeartMonth/"><img src="images/hearth_month.PNG" alt="hearth_month picture"/></a>
+			<a href="https://swanhtet-grc.github.io/HeartMonth/"><img src="images/hearth_month.PNG"
+					alt="hearth_month picture" /></a>
 			<p><strong>American Hearth Month Website</strong>
-			<br>This is a school project which we did for American Hearth month.</p>
-		</div>	
+				<br>This is a school project which we did for American Hearth month.</p>
+		</div>
 	</main>
- 
- 
+
+
 	<footer>
-		
+
 		<p> <i class="fas fa-laptop-code"></i> &nbsp;Developed By Swan Htet&nbsp; <i class="fas fa-laptop-code"></i></p>
 	</footer>
-    </body>
+</body>
+
 </html>
