--- a/resume.html
+++ b/resume.html
@@ -1,37 +1,38 @@
 <!doctype html>
 <html lang="en">
-    <head>
-      <!--
+
+<head>
+	<!--
         Author: Swan Htet
         Date:Feb 23, Winter 2020
         filename: resume.html
         description: This is an html file.
       -->
-        <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>My Resume</title>
-		<link href ="styles/reset.css" rel="stylesheet"/>
-		<link href ="styles/resume_styles.css" rel="stylesheet"/>
-		<link href ="styles/site_styles.css" rel="stylesheet"/>
-		
-		<script src="https://kit.fontawesome.com/789d66cafa.js" crossorigin="anonymous"></script>
-    </head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>My Resume</title>
+	<link href="styles/reset.css" rel="stylesheet" />
+	<link href="styles/resume_styles.css" rel="stylesheet" />
+	<link href="styles/site_styles.css" rel="stylesheet" />
+
+	<script src="https://kit.fontawesome.com/789d66cafa.js" crossorigin="anonymous"></script>
+</head>
 
 
-    <body>
-   	<nav>
-	<ul>
-		<li><a href="index.html">About Me</a></li>
-		<li><a href="projects.html">My Projects</a></li>
-		<li><a href="resume.html">My Resume</a></li>		
-	</ul>
+<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">About Me</a></li>
+			<li><a href="projects.html">My Projects</a></li>
+			<li><a href="resume.html">My Resume</a></li>
+		</ul>
 	</nav>
-    <header>
+	<header>
 		<h1>My Resume</h1>
-    </header>
-	
+	</header>
+
 	<main>
-		
+
 		<h2>Programming Languages and Technologies</h2>
 		<p class="icons">
 			<i class="fab fa-html5"></i>
@@ -39,30 +40,33 @@
 			<i class="fab fa-python"></i>
 			<i class="fab fa-java"></i>
 			<i class="fab fa-js-square"></i>
+			<i class="fab fa-react"></i>
+			<i class="fab fa-node"></i>
 		</p>
 
 		<h2>My Experience</h2>
-		<p >
+		<p>
 			<strong>IT Help Desk at Green River College</strong><br>
-			March 2020 - Present			
+			March 2020 - Present
 		</p>
-	
-	
+
+
 		<h2>My Education</h2>
-		
-		<p >
-			<strong>Bachelor of Applied Science in Software Development</strong><br> 
+
+		<p>
+			<strong>Bachelor of Applied Science in Software Development</strong><br>
 			Green River College<br>
 			2019 - 2021<br><br>
-			<strong>Associate of Applied Science in Software Development</strong><br> 
+			<strong>Associate of Applied Science in Software Development</strong><br>
 			Green River College<br>
-			2018 - 2019<br>	
+			2018 - 2019<br>
 		</p>
 	</main>
- 
+
 	<footer>
-		
+
 		<p> <i class="fas fa-laptop-code"></i> &nbsp;Developed By Swan Htet&nbsp; <i class="fas fa-laptop-code"></i></p>
 	</footer>
-    </body>
+</body>
+
 </html>
