--- a/resume.html
+++ b/resume.html
@@ -34,11 +34,12 @@
 	<main>
 
 		<h2>Programming Languages and Technologies</h2>
-		<p class="icons">
-			<i class="fab fa-python"></i>
+		<p class="icons">			
 			<i class="fab fa-js-square"></i>
 			<i class="fab fa-react"></i>
 			<i class="fab fa-node"></i>
+			<i class="fab fa-python"></i>
+			<i class="fab fa-java"></i>
 		</p>
 
 		<h2>My Experience</h2>
