--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 				<br>This is a e-commerence site where you can buy things.</p>
 		</div>
 		<div class="img2">
-			<a href="https://swan-calculator.netlify.app/"><img src="images/img2.JPG"
+			<a href="https://swan-calculator.netlify.app/"><img src="images/img2.PNG"
 					alt="swan-calculator picture" /></a>
 			<p><strong>Swan's Calculator</strong>
 				<br>This is a calculator using React.js.</p>
