--- a/projects.html
+++ b/projects.html
@@ -33,26 +33,26 @@
 
 	<main>
 		<div class="img4">
-			<a href="https://swan-store.netlify.com/"><img src="images/store.PNG" alt="store picture" /></a>
+			<a href="https://swan-store.netlify.com/"><img src="images/store.png" alt="store picture" /></a>
 			<p><strong>Swan Store</strong>
 				<br>This is a e-commerence site where you can buy things.</p>
 		</div>
 		<div class="img2">
-			<a href="https://swan-calculator.netlify.app/"><img src="images/img2.PNG"
+			<a href="https://swan-calculator.netlify.app/"><img src="images/img2.png"
 					alt="swan-calculator picture" /></a>
 			<p><strong>Swan's Calculator</strong>
 				<br>This is a calculator using React.js.</p>
 		</div>
 		<div class="img1">
 			<a href="https://swan-dicegame.netlify.app/">
-				<img src="images/dice.PNG" alt="dice game picture" /></a>
+				<img src="images/dice.png" alt="dice game picture" /></a>
 			<p><strong>Dice Rolling Game</strong>
 				<br>This is a game where the user can play with the dices.
 				This game is built with HTML, CSS and JavaScript.</p>
 		</div>
 
 		<div class="img3">
-			<a href="https://swanhtet-grc.github.io/HeartMonth/"><img src="images/hearth_month.PNG"
+			<a href="https://swanhtet-grc.github.io/HeartMonth/"><img src="images/hearth_month.png"
 					alt="hearth_month picture" /></a>
 			<p><strong>American Hearth Month Website</strong>
 				<br>This is a school project which we did for American Hearth month.</p>
