--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 		<p>
 			My name is Swan Htet.
 			I am from Myanmar and I studied Software Engineering at a College in Seattle, USA.
-			After that, I transfered to an online US university and studying Computer Science.
+			After that, I transferred to an online US university and studying Computer Science.
 			During my free time, I teach myself programming languages like JavaScript, Python
-			and technology like React, Node, Express, Git, Github, HTML, CSS,
+			and technology like React, Node, Express, Git, GitHub, HTML, CSS,
 			Boostrap etc.I love being a Software Engineer and I am very passionate
 			about Technology.
 		</p>
