--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	<main>
 		<h1>About Me</h1>
-		<img src="images/profile.JPG" alt="Swan Htet's picture" />
+		<img src="images/profile.jpg" alt="Swan Htet's picture" />
 
 		<p>
 			My name is Swan Htet.
